log
Sun 16 Oct 2022 10:34:30 PM UTC: 
 heap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:10: error: ‘heapArray’ undeclared (first use in this function)
   22 |   return heapArray[0].data;
      |          ^~~~~~~~~
heap.c:22:10: note: each undeclared identifier is reported only once for each function it appears in
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a42a476
Sun 16 Oct 2022 10:34:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b57b642
Sun 16 Oct 2022 10:37:30 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:18: error: ‘heapArray’ undeclared (first use in this function)
   30 |   while(now>0 && heapArray [(now-1)/2].priority < priority){
      |                  ^~~~~~~~~
heap.c:30:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d5c4f0f
Sun 16 Oct 2022 10:37:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:18: error: ‘heapArray’ undeclared (first use in this function)
   30 |   while(now>0 && heapArray [(now-1)/2].priority < priority){
      |                  ^~~~~~~~~
heap.c:30:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
afd4e85
Sun 16 Oct 2022 10:37:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:5: error: ‘heapArray’ undeclared (first use in this function)
   31 |     heapArray[now] = pq->heapArray[(now-1)/2];
      |     ^~~~~~~~~
heap.c:31:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
da7769d
